tests/ui/error_from_inside.stderr
error[E0308]: mismatched types
  --> tests/ui/error_from_inside.rs:8:1
   |
 8 | #[culit]
   | ^^^^^^^^ expected `()`, found integer
...
22 |             let it: () = $value;
   |                     -- expected due to this
   |
   = note: this error originates in the attribute macro `culit` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/error_from_inside.rs:8:1
   |
 8 | #[culit]
   | ^^^^^^^^ expected `()`, found floating-point number
...
22 |             let it: () = $value;
   |                     -- expected due to this
   |
   = note: this error originates in the attribute macro `culit` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/error_from_inside.rs:12:5
   |
12 |     'x'w;
   |     ^^^^ expected `()`, found `char`
...
22 |             let it: () = $value;
   |                     -- expected due to this

error[E0308]: mismatched types
  --> tests/ui/error_from_inside.rs:13:5
   |
13 |     b'x'w;
   |     ^^^^^ expected `()`, found `u8`
...
22 |             let it: () = $value;
   |                     -- expected due to this

error[E0308]: mismatched types
  --> tests/ui/error_from_inside.rs:14:5
   |
14 |     "x"w;
   |     ^^^^ expected `()`, found `&str`
...
22 |             let it: () = $value;
   |                     -- expected due to this

error[E0308]: mismatched types
  --> tests/ui/error_from_inside.rs:15:5
   |
15 |     b"x"w;
   |     ^^^^^ expected `()`, found `&[u8; 1]`
...
22 |             let it: () = $value;
   |                     -- expected due to this

error[E0308]: mismatched types
  --> tests/ui/error_from_inside.rs:16:5
   |
16 |     c"x"w;
   |     ^^^^^ expected `()`, found `&CStr`
...
22 |             let it: () = $value;
   |                     -- expected due to this
